<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="model.SignUpIn.SignIn"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@color/gradStart">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_account_circle_24"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:id="@+id/imgProfile"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/hind_siliguri_bold"
            android:text="Login Page"
            android:textColor="@color/grey"
            android:textSize="35dp" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextEmailAddress_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="80dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPassword_layout"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Password"
            android:inputType="textPassword"
            android:id="@+id/editTextPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="Sign In" />
    </LinearLayout>

    <TextView
        android:id="@+id/SignUpHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="Not registered? Sign Up here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>